# WB-parser

./: .gitignore  README.md
backend/: .dockerignore  Dockerfile_dev  docker-compose.dev.yml  pyproject.toml
backend/core/: exceptions.py  filters.py  models.py  schemas.py  views.py  wb_parser.py
backend/core/migrations/: 0001_initial.py
backend/wb_parser/: settings.py  urls.py
frontend/: package-lock.json
frontend/wb_parser/: README.md  eslint.config.js  package-lock.json  package.json  quasar.config.ts  tsconfig.json
frontend/wb_parser/src/boot/: axios.js
frontend/wb_parser/src/components/: BarChart.vue  LineChart.vue  models.ts
frontend/wb_parser/src/layouts/: MainLayout.vue
frontend/wb_parser/src/pages/: IndexPage.vue
